[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/items/Grenade.gd" type="Script" id=1]
[ext_resource path="res://assets/img/weapons/Jestan/grenade.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.274004, 0.347809 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 5 )

[node name="Grenade" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.10543e-15 )
scale = Vector2( 12.8734, 14.3757 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 7, 10 )

[node name="PickupZone" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4

[node name="PickupZoneShape" type="CollisionShape2D" parent="PickupZone"]
modulate = Color( 0.105882, 0.654902, 0.027451, 0.682353 )
scale = Vector2( 0.919999, 1 )
shape = SubResource( 2 )

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="Cotter" type="Node2D" parent="."]
position = Vector2( 2.00602, -3.49104 )

[connection signal="timeout" from="ExplodeTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
